Loads of small bugfixes. Generally the heartrate detection now works and the coordinate system is also fine. Fixed menus. Now working. TODO: Vector ECG.

--- a/app/src/main/res/layout/xyplotfragment.xml
+++ b/app/src/main/res/layout/xyplotfragment.xml
@@ -18,7 +18,7 @@
         android:id="@+id/bpmPlotView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        ap:title="BPM"
+        ap:title="Heart rate"
         ap:rangeTitle="range"
         ap:domainTitle="domain"
         ap:lineLabels="left|bottom"
