Added Vector ECG plot fragment.

--- a/app/src/main/res/menu/main_menu_attysecg.xml
+++ b/app/src/main/res/menu/main_menu_attysecg.xml
@@ -21,7 +21,10 @@
                         android:title="off" />
                     <item
                         android:id="@+id/plotWindowBPM"
-                        android:title="heart rate" />
+                        android:title="Heart rate" />
+                    <item
+                        android:id="@+id/plotWindowVector"
+                        android:title="Vector ECG" />
                 </menu>
             </item>
 
