--- a/app/src/main/res/layout/main_activity_layout.xml
+++ b/app/src/main/res/layout/main_activity_layout.xml
@@ -18,11 +18,12 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
             android:id="@+id/mainplotlayout"
             android:orientation="vertical">
 
@@ -51,9 +52,11 @@
         </FrameLayout>
 
         <FrameLayout
+            android:background="@android:color/black"
+            android:layout_height="0dp"
+            android:layout_weight="0"
             android:id="@+id/fragment_plot_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="match_parent" />
 
     </LinearLayout>
 
