--- a/app/src/main/res/layout/vectorplotfragment.xml
+++ b/app/src/main/res/layout/vectorplotfragment.xml
@@ -2,19 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ap="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
-    <com.androidplot.xy.XYPlot
-        style="@style/APDefacto.Dark"
-        android:id="@+id/vectorPlotView"
+    <android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        ap:title="Vector ECG"
-        ap:rangeTitle="range"
-        ap:domainTitle="domain"
-        ap:lineLabels="left|bottom"
-        ap:lineLabelRotationBottom="-45" />
+        android:layout_height="fill_parent">
+
+        <com.androidplot.xy.XYPlot
+            android:layout_gravity="center_horizontal"
+            app:layout_aspectRatio="100%"
+            app:layout_heightPercent="100%"
+            app:layout_marginTopPercent="5%"
+            app:layout_marginLeftPercent="0%"
+            android:id="@+id/vectorPlotView"
+            style="@style/APDefacto.Dark"
+            ap:domainTitle="domain"
+            ap:lineLabelRotationBottom="-45"
+            ap:lineLabels="left|bottom"
+            ap:rangeTitle="range"
+            ap:title="Vector ECG" />
+
+    </android.support.percent.PercentFrameLayout>
 
 </LinearLayout>
