Changed how the fragments are getting removed. There seemed to be a chance that the pointer becomes null but not the fragment. Also small tweaks to the layout.

--- a/app/src/main/res/layout-land/vectorplotfragment.xml
+++ b/app/src/main/res/layout-land/vectorplotfragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ap="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
@@ -12,9 +11,9 @@
         android:layout_height="fill_parent">
 
         <com.androidplot.xy.XYPlot
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center"
             app:layout_aspectRatio="100%"
-            app:layout_widthPercent="100%"
+            app:layout_widthPercent="95%"
             app:layout_marginTopPercent="0%"
             app:layout_marginLeftPercent="0%"
             android:id="@+id/vectorPlotView"
