--- a/app/src/main/res/layout/heartrateplotfragment.xml
+++ b/app/src/main/res/layout/heartrateplotfragment.xml
@@ -9,20 +9,56 @@
         xmlns:ap="http://schemas.android.com/apk/res-auto"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        app:layout_heightPercent="95%"
-        app:layout_widthPercent="95%"
         android:layout_gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_heightPercent="95%"
+        app:layout_widthPercent="95%">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ToggleButton
+                android:id="@+id/bpmautoscale"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textOff="Fixed scale"
+                android:textOn="Autoscale" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=" " />
+
+            <Button
+                android:id="@+id/bpmreset"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Reset" />
+
+        </LinearLayout>
 
         <TextView
-            android:layout_gravity="center_vertical"
             android:id="@+id/bpmTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:gravity="end"
             android:text=""
             android:textColor="#00FFFF"
             android:textSize="36sp" />
+
+        <TextView
+            android:id="@+id/bpmstats"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text=""
+            android:textColor="#00FFFF"
+            android:textSize="14sp" />
 
         <com.androidplot.xy.XYPlot
             android:id="@+id/bpmPlotView"
