Added a fragment to inspect one PQRST complex

--- a/app/src/main/res/menu/main_menu_attysecg.xml
+++ b/app/src/main/res/menu/main_menu_attysecg.xml
@@ -25,6 +25,9 @@
                     <item
                         android:id="@+id/plotWindowVector"
                         android:title="Vector ECG" />
+                    <item
+                        android:id="@+id/plotWindowECG"
+                        android:title="PQRST inspector" />
                 </menu>
             </item>
 
