--- a/app/src/main/res/menu/main_menu_attysecg.xml
+++ b/app/src/main/res/menu/main_menu_attysecg.xml
@@ -40,6 +40,10 @@
                     android:id="@+id/showAugmented"
                     android:checked="true"
                     android:title="Show Augmented leads" />
+                <item
+                    android:id="@+id/heartbeatsound"
+                    android:checked="false"
+                    android:title="Heartbeat sound" />
             </group>
 
             <item
