--- a/app/src/main/res/layout/vectorplotfragment.xml
+++ b/app/src/main/res/layout/vectorplotfragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_margin="10dp">
@@ -22,6 +22,6 @@
             ap:rangeTitle="range"
             ap:title="Vector ECG" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
