--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,6 +5,16 @@
         android:summary="Single channel mode for Vets and patient monitoring"
         android:defaultValue="false"
         android:title="Single channel mode" />
+    <CheckBoxPreference
+        android:key="hr_display"
+        android:summary="Show the heartrate plot at the startup"
+        android:defaultValue="true"
+        android:title="Heartrate plot at startup" />
+    <CheckBoxPreference
+        android:key="hrv_logging"
+        android:summary="Heartrate and heartrate variability logging into a file on the sd-card"
+        android:defaultValue="false"
+        android:title="HR/HRV logging" />
     <ListPreference
         android:entries="@array/gainOptions"
         android:entryValues="@array/gainValues"
