--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,58 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-<CheckBoxPreference
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <CheckBoxPreference
+        android:defaultValue="false"
         android:key="single_ch"
         android:summary="Single channel mode for Vets and patient monitoring"
-        android:defaultValue="false"
         android:title="Single channel mode" />
     <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="leadsoff"
+        android:summary="Tests if the electrodes have contact with the skin and shows a diagram how to fix it"
+        android:title="Lead off detection" />
+    <CheckBoxPreference
+        android:defaultValue="true"
         android:key="hr_display"
         android:summary="Show the heartrate plot at the startup"
-        android:defaultValue="true"
         android:title="Heartrate plot at startup" />
     <CheckBoxPreference
+        android:defaultValue="false"
         android:key="hrv_logging"
         android:summary="Heartrate logging to the SD-card"
-        android:defaultValue="false"
         android:title="HR logging" />
     <EditTextPreference
-        android:key="hrv_filename"
-        android:title="Filename for heartrate logging"
+        android:defaultValue="hr.tsv"
         android:dialogTitle="HR filename"
-        android:defaultValue="hr.tsv"/>
+        android:key="hrv_filename"
+        android:title="Filename for heartrate logging" />
     <ListPreference
+        android:defaultValue="0"
         android:entries="@array/gainOptions"
         android:entryValues="@array/gainValues"
         android:key="gainpref"
         android:summary="Full scale range in Volts"
-        android:defaultValue="0"
         android:title="ADC range" />
     <ListPreference
+        android:defaultValue="2"
         android:entries="@array/textDataFileSeparatorOptions"
         android:entryValues="@array/textDataFileSeparatorValues"
-        android:summary="Separator between the values in the datafile saved to the SD card"
         android:key="data_separator"
-        android:defaultValue="2"
+        android:summary="Separator between the values in the datafile saved to the SD card"
         android:title="Separator (TSV, CSV or SSV)" />
     <ListPreference
+        android:defaultValue="50"
         android:entries="@array/powerlineOptions"
         android:entryValues="@array/powerlineValues"
-        android:summary="Filter to filter out the mains interference (US: 60Hz, EU: 50Hz, ...)"
         android:key="powerline"
-        android:defaultValue="50"
+        android:summary="Filter to filter out the mains interference (US: 60Hz, EU: 50Hz, ...)"
         android:title="Powerline frequency" />
     <CheckBoxPreference
+        android:defaultValue="true"
         android:key="mainsfilter"
         android:summary="Notch filter which removes mains interference from the ECG"
-        android:defaultValue="true"
         android:title="Powerline notch filter" />
     <ListPreference
+        android:defaultValue="1"
         android:entries="@array/samplingRateOptions"
         android:entryValues="@array/samplingRateValues"
-        android:summary="Sampling rate the Attys is acquiring the data and transmitting it"
         android:key="samplingrate"
-        android:defaultValue="1"
+        android:summary="Sampling rate the Attys is acquiring the data and transmitting it"
         android:title="Sampling rate" />
 </PreferenceScreen>
