Initial complete version for ECG plotting

--- a/plot-ecg/plotecg.css
+++ b/plot-ecg/plotecg.css
@@ -16,3 +16,8 @@
 #drag_upload_file #selectfile {
   display: none;
 }
+
+.dygraph-ylabel { font-size: 18px; }
+
+#filename { font-size: 24px;  padding: 8px;}
+
